# Exchangev2

./: .gitignore  CMakeLists.txt  Dockerfile  Vagrantfile  bootstrap.sh  exchange.toml  gateway.py  generator.py  matching_engine.py  new_gateway.py  notes.txt  order.in  order.out  orderclass.py  orders.txt  receive_order_server.py  requirements.txt  securities.toml  send_order_client.py  setup_exchange.py  socket_client.py  socket_server.py  socket_test.py  target_main.py  test_matching_engine.py  test_network.py  test_orderbook.py  test_orderbook_cancel.py  test_orderbook_entry.py  tickerplant.py  trading_bot.py
example_order_txt/: bot1_order.txt  bot2_order.txt
